refactor(backend): finaliza atualizacao para producao (controllers, repositorios e config)